2008-10-26  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump gnome-desktop requirement to 2.25.1

2008-10-25  Jens Granseuer  <jensgr@gmx.net>

	* configure.in: bump required GTK+ version to 2.13.1

Fri Oct 24 17:17:47 2008  Søren Sandmann  <sandmann@redhat.com>

	* Get rid of a number of unnecessary gnome.h includes

	* capplets/keybindings/gnome-keybinding-properties.c: Use
	gtk_init() instead of gnome_program_init().

	* A couple of formatting fixes

Fri Oct 24 15:42:11 2008  Søren Sandmann  <sandmann@redhat.com>

	* Use gtk_show_uri() instead of gnome_help_display_desktop()

Fri Oct 24 14:44:16 2008  Søren Sandmann  <sandmann@redhat.com>

	* Use GnomeDesktopThumbnailFactory instead of
	GnomeThumbnailFactory

2008-10-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 556977 – avoid duplicate custom keybindings

	* capplets/keybindings/gnome-keybinding-properties.c: Filter
	out custom keybindings that are also listed in xml files.

2008-10-19  Matthias Clasen  <mclasen@redhat.com>

	Bug 556967 – fix editability of group headings

	* capplets/keybindings/gnome-keybinding-properties.c
	(description_set_func): Don't let section headings be editable.

2008-10-16  Davyd Madeley  <davyd@madeley.id.au>

	* po/POTFILES.in: readd to POTFILES.in

2008-10-16  Davyd Madeley  <davyd@madeley.id.au>

	* configure.in:
	* font-viewer/Makefile.am:
	* Makefile.am:
	- hook gnome-font-viewer and gnome-thumbnail font back into the build
	- need to check to see if the strings were lost from the translations

2008-10-15  Davyd Madeley  <davyd@madeley.id.au>

	* vfs-methods/: remove properly
	* font-viewer/: resurrect gnome-font-viewer and gnome-thumbnail-font
	  from revision 8786 (not yet added to toplevel Makefile)

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.24.1.

==================== 2.24.0.1 ====================

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* configure.in: version 2.24.0.1
