@@ -89,13 +89,12 @@ COMMON_MODULES="gtk+-2.0 >= 2.13.1 dnl
  glib-2.0 >= 2.17.4 dnl
  gio-2.0 dnl
  gconf-2.0 dnl
- libgnomeui-2.0 >= 2.2.0 dnl
  libglade-2.0 >= 2.0.0 dnl
  gnome-desktop-2.0 >= 2.25.1"
 PKG_CHECK_MODULES(LIBSLAB, $COMMON_MODULES gnome-desktop-2.0 librsvg-2.0 libgnome-menu pango eel-2.0)
 PKG_CHECK_MODULES(CAPPLET, $COMMON_MODULES)
-PKG_CHECK_MODULES(GNOMECC, $COMMON_MODULES libgnome-menu >= 2.10.1 libpanelapplet-2.0)
-PKG_CHECK_MODULES(GNOME, libgnomeui-2.0)
+PKG_CHECK_MODULES(GNOMECC, $COMMON_MODULES libgnome-menu >= 2.10.1)
+PKG_CHECK_MODULES(GNOMECC_SHELL, $COMMON_MODULES libgnomeui-2.0 libgnome-menu libpanelapplet-2.0)
 PKG_CHECK_MODULES(DBUS, dbus-1 dbus-glib-1)
 PKG_CHECK_MODULES(GNOME_DESKTOP, gnome-desktop-2.0)
 PKG_CHECK_MODULES(DEFAULT_APPLICATIONS_CAPPLET, libxml-2.0)
@@ -120,6 +119,7 @@ if $PKG_CONFIG --exists xft ; then
 fi
 
 PKG_CHECK_MODULES(FONT_CAPPLET, $COMMON_MODULES $xft_modules)
+PKG_CHECK_MODULES(FONT_VIEWER, $COMMON_MODULES $xft_modules gnome-vfs-2.0 libgnomeui-2.0)
 
 PKG_CHECK_MODULES(AT_CAPPLET, $COMMON_MODULES)
 
