@@ -1,6 +1,6 @@
 INCLUDES =					\
 	-I$(top_srcdir)/libslab			\
-	$(GNOMECC_CFLAGS)
+	$(GNOMECC_SHELL_CFLAGS)
 
 bin_PROGRAMS = gnome-control-center 
 
@@ -8,7 +8,7 @@ gnome_control_center_SOURCES =		\
 	control-center.c
 
 gnome_control_center_LDADD =						\
-	$(GNOMECC_LIBS)							\
+	$(GNOMECC_SHELL_LIBS)						\
 	$(top_builddir)/libslab/libslab.la
 
 AM_CPPFLAGS =							\
