@@ -1,3 +1,8 @@
+Sun Oct 26 19:15:22 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* configure.in: Stop linking to the gnome libraries, except in the
+	shell and in the font viewer.
+
 2008-10-26  Jens Granseuer  <jensgr@gmx.net>
 
 	* configure.in: bump gnome-desktop requirement to 2.25.1
